<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_wallet">Кошелёк</string>
    <string name="menu_map">Карты</string>
    <string name="map_key_api" translatable="false">AIzaSyBpu4q4nwmZHIkBqQBi-YIYgiT2EVsqbmU</string>
    <string name="name_of_the_transaction">Наименование сделки</string>
    <string name="enter_the_purpose_of_payment">Введите назначение платежа</string>
    <string name="sum">Сумма</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="date">Дата</string>
    <string name="date_hint">дд.мм.гг</string>
    <string name="add">Добавить</string>
    <string name="deal">Сделки</string>
    <string name="title_activity_wallet_add_deal">WalletAddDeal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>