<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--tools:context=".ui.wallet.WalletFragment"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/name_of_the_transaction"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_new_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:hint="@string/enter_the_purpose_of_payment"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/qu_grey_600" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/border"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sum"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/text_sum_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:hint="@string/enter_sum"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/qu_grey_600"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

      <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_date"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:hint="@string/date_hint"
                    android:inputType="datetime"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/qu_grey_600" />

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_calendar_today_24" />
            </LinearLayout>

        </LinearLayout>-->
    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/qu_grey_600"
        android:text="@string/add"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_margin="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>